Grammar.txt
init -> comentario code
	 | comentario

code -> procedimientos main
	 | main procedimientos
	 |procedimientos main procedimientos

procedimientos -> procedimiento procedimientos 
			| procedimiento

procedimiento -> proc

def proc: PROC nombre LP instrucciones RP

instrucciones -> intruccion instrucciones
		    | instruccion

instrucciones -> def
	    	    | call
	     	    | alter
	          | not
	          | condFunction (isTrue)
	     	  | print
              | iterative (while and until)
	          | case
	          | mover
	          | aleatorio
	          | sentences
	          | repeat

expresion -> expresion + term
           | expresion - term
           | term

term -> term * factor
        | term / factor
        | factor

factor -> number
        | LP expresion RP

condition -> oper GT oper
            | oper LT oper 
            | oper EQUAL oper
            | oper DIF oper   
            | oper GTE oper  
            | oper LTE oper
            | condFunction

oper -> value
       | expresion

value -> number
	  | bool
